# shared

./: .gitignore  README.md  pyproject.toml
src/shared/: cli_args.py  file_io.py  logging_setup.py  settings.py  time_utilities.py  versioning.py
src/shared.egg-info/: PKG-INFO  SOURCES.txt
versioning/: semver.txt  update_version.py  version.txt
